--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,9 @@ mark {
     background-color: var(--fourth-color);
 }
 
-/* TABLAS  */
+/* TABLA PRINCIPAL  */
 .main-table-container{
+    display: flex;
     margin: 5%;
 }
 
@@ -62,7 +63,7 @@ mark {
 table, tr, th{
     border: 1px solid;
     color: var(--black-color);
-    border-collapse: collapse;
+    border-collapse: collapse; /*fuciona bordes*/
 }
 
 table{
@@ -88,16 +89,80 @@ select{
     padding: 0%;
 }
 
-textarea{
-    width: 100%;
-    resize: none;
+.short-long-select{
+    background-color: var(--third-color);
+    color: var(--white-color);
+} 
+
+.short{
+    background-color: var(--third-color);
 }
 
-
-.add-row-button{
-    width: 1.8rem;
-    height: 1.8rem;
-    color: var(--black-color);
+.long{
     background-color: var(--fourth-color);
 }
 
+
+
+
+/*BOTONES*/
+.add-row-button{
+    position: relative;
+    text-decoration: none;
+    width: 2.6rem;
+    height: 2rem;
+    border: 2px solid var(--fourth-color);
+    color: var(--black-color);
+    letter-spacing: 0.8px;
+    z-index: 1;
+    overflow: hidden;
+
+}
+
+.add-row-button::before{
+    content:"";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0%;
+    top: -200%;
+    background-color: var(--fourth-color);
+    border-radius:50%;
+    transition: all 0.6s ease;
+    z-index: -1;
+}
+
+.add-row-button:hover::before{
+    top: 0;
+    border-radius: 0%;
+}
+
+.delete-row-button{
+    position: relative;
+    text-decoration: none;
+    width: 3.6rem;
+    height: 2rem;
+    border: 2px solid var(--third-color);
+    color: var(--black-color);
+    letter-spacing: 0.8px;
+    z-index: 1;
+    overflow: hidden;
+}
+
+.delete-row-button::before{
+    content:"";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0%;
+    top: -200%;
+    background-color: var(--third-color);
+    border-radius:50%;
+    transition: all 0.6s ease;
+    z-index: -1;
+}
+
+.delete-row-button:hover::before{
+    top: 0;
+border-radius: 0%;
+}
