--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,13 @@ mark {
     background-color: var(--fourth-color);
 }
 
-/* TABLA PRINCIPAL  */
+/********FIN DEFAULT*********/
+
+/************** TABLA PRINCIPAL  ***************/
+
+
+/****TABLA****/
+
 .main-table-container{
     display: flex;
     margin: 5%;
@@ -81,6 +87,8 @@ td{
     border: 1px solid black;
 }
 
+
+/****SELECT****/
 select{
     font-family: var(--second-font);
     width: 100%;
@@ -89,10 +97,18 @@ select{
     padding: 0%;
 }
 
-.short-long-select{
-    background-color: var(--third-color);
-    color: var(--white-color);
-} 
+
+/* Estilo para SHORT */
+.short-long-select.short {
+    background-color: #ff0000; 
+    color: #ffffff; 
+}
+
+/* Estilo para LONG */
+.short-long-select.long {
+    background-color: #00ff00; 
+    color: #000000; 
+}
 
 .short{
     background-color: var(--third-color);
@@ -164,5 +180,5 @@ select{
 
 .delete-row-button:hover::before{
     top: 0;
-border-radius: 0%;
+    border-radius: 0%;
 }
