--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ li {
 :root{
     --first-font: "Roboto", sans-serif;;
     --second-font: "Nunito", sans-serif; 
-    --first-color: #c15e1b;
+    --first-color: #052a85;
     --second-color: #995a49;
     --third-color: #fd0000;
     --fourth-color: #51ff00;
@@ -52,9 +52,8 @@ mark {
 
 /********FIN DEFAULT*********/
 
+
 /************** TABLA PRINCIPAL  ***************/
-
-
 /****TABLA****/
 
 .main-table-container{
@@ -76,6 +75,7 @@ table{
     width: 100%;
 }
 
+
 th{
     font-family: var(--first-font);
     padding: 8px;
@@ -87,38 +87,136 @@ td{
     border: 1px solid black;
 }
 
-
-/****SELECT****/
 select{
     font-family: var(--second-font);
+    font-size: 0.879rem;
     width: 100%;
     height: 100%;
     margin: 0%;
     padding: 0%;
 }
 
+input{
+    font-family: var(--second-font);
+    font-size: 0.9rem;
+}
+
+/**** ACTIVO ****/
+.celda-activo{
+    width: 100%;
+    background-color: rgb(0, 51, 102);
+
+}
+
+.activo{
+    width: 100%;
+    background-color: rgb(0, 51, 102);
+    color: var(--white-color);
+    border: none;
+}
+
+
+/****COMPRA VENTA ****/
+.celda-compra-venta{
+    width: 100%;
+}
+
+.short-long-select{
+    width: 100%;
+}
+
 
 /* Estilo para SHORT */
 .short-long-select.short {
-    background-color: #ff0000; 
+    background-color: rgb(0, 153, 102); 
     color: #ffffff; 
+}
+
+.short{
+    background-color: rgb(0, 153, 102);
 }
 
 /* Estilo para LONG */
 .short-long-select.long {
-    background-color: #00ff00; 
+    background-color: rgb(204, 51, 51); 
     color: #000000; 
 }
 
-.short{
-    background-color: var(--third-color);
-}
-
 .long{
-    background-color: var(--fourth-color);
+    background-color: rgb(204, 51, 51);
 }
 
 
+/**** INVERSION ****/
+.celda-inversion{
+    background-color: rgb(51, 51, 51); 
+}
+
+.inversion{
+    background-color: rgb(78, 77, 77);
+    color: var(--white-color);
+    border: none;
+}
+
+
+/**** PRECIO DE ENTRADA/SALIDA ****/
+.celda-entrada-salida{
+    background-color: rgb(240, 240, 240);
+    height: 100%;
+    width: 100%;
+}
+.precio-entrada{
+    background-color: var(--white-color);
+    border: none;
+}
+.precio-salida{
+    background-color: var(--white-color);
+    border: none;
+}
+
+
+/**** ROI ****/
+.celda-roi{
+    background-color: rgb(240, 240, 240);
+}
+.roi{
+    background-color: var(--white-color);
+    border: none;
+}
+
+
+/**** GANANCIO/PERDIDA ****/
+.celda-ganancia-perdida{
+    background-color: rgb(240, 240, 240);
+    /*#CC3333 si es perdida*/
+}
+.ganancia-perdida{
+    background-color: var(--white-color);
+    border: none;
+}
+
+
+/**** COMISION ****/
+.celda-comision{
+    background-color: rgb(51, 51, 51);
+}
+.comision{
+    background-color: rgb(78, 77, 77);
+    color: var(--white-color);
+    border: none;
+}
+
+
+
+/**** FECHAS ****/
+.celda-fechas{
+    background-color: rgb(240, 240, 240);
+}
+.fecha{
+    background-color: rgb(240, 240, 240);
+    color: rgb(51, 51, 51);
+    border: none;
+}
 
 
 /*BOTONES*/
